--- a/deployment/popup.html
+++ b/deployment/popup.html
@@ -1,16 +1,10 @@
-﻿<!--/*REM - This file is part of Craigslist submitter*/-->
-    <!--in mint target this search box with id:
-        search-input-container
-        valid pages: transaction.event
-        -->
+﻿<!DOCTYPE html>
 <html>
     <head>
         <script src="js/third/jquery-1.11.2.min.js"></script>
         <link rel="stylesheet" type="text/css" href="css/main.css">
-    </head>
-
-	<!--<input type="button" id="mint_ext_button_manual" value="Run manually">-->
- 
+    </head> 
     <div id="content_container"><div id="loading_image"><img src="images/ring-preloader/loading_48x48.gif"></div></div>
+    <p><input type="checkbox" id="chkShowDeleted" value="Show deleted items"></input><label for="chkShowDeleted" id='lblShowDeleted'>Show deleted items</label></p>
     <script src="js/popup.js"></script>
 </html>
